--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,15 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    //For Circular Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //For DrawerLayout
+    implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+    //For Shadow
+    implementation 'com.github.fornewid:neumorphism:0.3.2'
+
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
