--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     //For DrawerLayout
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
     //For Nav Drawer
-    implementation 'com.google.android.material:material:1.7.0-beta01'
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
+    //For Api Request
+    implementation 'com.android.volley:volley:1.2.1'
 
     implementation 'androidx.appcompat:appcompat:1.5.0'
 
